<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.github.jameshnsears.brexitsoundboard.person.ActivityLiam">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:clipToPadding="true"
        android:fillViewport="true"
        android:scrollbarStyle="insideInset"
        android:scrollbarThumbVertical="@color/colorBlue"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:id="@+id/buttonLiamCitizensFirstNotPolitics"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_liam_CitizensFirstNotPolitics"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonLiamEasiestInHumanHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_liam_EasiestInHumanHistory"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonLiamTooLazyAndTooFat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_liam_TooLazyAndTooFat"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonLiamThisIsNotJustAboutEurope"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_liam_ThisIsNotJustAboutEurope"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonLiamOldMenOfBrussels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_liam_OldMenOfBrussels"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonLiamShockTherapyRequiredForEu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_liam_ShockTherapyRequiredForEU"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonLiamSelfDefeating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_liam_SelfDefeatingPessimists"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonLiamChickenObsessedMedia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_liam_ChickenObsessedMedia"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonLiamAccessToEu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_liam_HaveToMaintainAccessToEU"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonLiamNotHavingADealWouldBeBad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_liam_NotHavingADealWouldBeBad"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonLiamFullConfidenceInPM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_liam_FullConfidenceInPM"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonLiamRuleTakersSellout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_liam_Sellout"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonLiamStealingBrexit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_liam_StealingBrexit"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonLiamWeCantBeBlackmailed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_liam_WeCantBeBlackmailed"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonLiamThinkOfTheConsequences"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_liam_ThinkOfTheConsequences"
                android:textColor="@color/colorRed" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
