<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.github.jameshnsears.brexitsoundboard.person.ActivityDavid">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:clipToPadding="true"
        android:fillViewport="true"
        android:scrollbarStyle="insideInset"
        android:scrollbarThumbVertical="@color/colorBlue"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:id="@+id/buttonDavidNoDownsideToBrexit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_david_no_downside_to_brexit"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonDavidConfidentOfAGoodOutcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_david_ConfidentOfAGoodOutcome"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonDavidTheRiskIsWorthIt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_david_TheRiskIsWorthIt"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonDavidIRuleNothingInNothingOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_david_IRuleNothingInNothingOut"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonDavidDifficultToReadWhatWeIntend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_david_DifficultToReadWhatWeIntend"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonDavidItsGoingIncrediblyWell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_david_ItsGoingIncrediblyWell"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonDavidItsGettingABitTense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_david_ItsGettingABitTense"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonDavidVeryGoodLawyers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_david_VeryGoodLawyers"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonDavidNobodyPretendedThisWillBeSimpleOrEasy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_david_NobodyPretendedThisWillBeSimpleOrEasy"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonDavidSectorialAnalysis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_david_SectorialAnalysis"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonDavidOnlyLastTwoMonthsMatter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_david_OnlyLastTwoMonthsMatter"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonDavidFollowUs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_david_FollowUs"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonDavidDamageWorseForEurope"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_david_DamageWorseForEurope"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonDavidAgreementWillFavourTheEU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_david_AgreementWillFavourTheEU"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonDavidTrumpMoment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_david_TrumpMoment"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonDavidDoNotBlameMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_david_DoNotBlameMe"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonDavidWeCanLookAfterOurselves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_david_WeCanLookAfterOurselves"
                android:textColor="@color/colorRed" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
