<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context="com.github.jameshnsears.brexitsoundboard.person.ActivityTheresa">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:clipToPadding="true"
        android:fillViewport="true"
        android:scrollbarStyle="insideInset"
        android:scrollbarThumbVertical="@color/colorBlue"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <Button
                android:id="@+id/buttonTheresaWeShouldStayInTheEu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_theresa_WeShouldStayInsideEU"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonTheresaCitizenOfNowhere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_theresa_CitizenOfNowhere"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonTheresAPlan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_theresa_APlanForBritain"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonTheresaBrexitMeansBrexit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_theresa_BrexitMeansBrexit"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonTheresaRedWhiteAndBlueBrexit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_theresa_RedWhiteAndBlueBrexit"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonTheresaCertaintyAndClarity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_theresa_CertaintyAndClarity"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonTheresaNoDealBetterThanABadDeal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_theresa_NoDealBetterThanABadDeal"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonTheresaNoNeedForAnElection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_theresa_NoNeedForAnElection"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonTheresaStrongAndStableLeadership"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_theresa_StrongAndStableLeadership"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonTheresaNIisPartOfTheUK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_theresa_NIisPartOfTheUK"
                android:textColor="@color/colorRed" />

            <Button
                android:id="@+id/buttonTheresaIWillNeverAgreeTo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/corners_buttons"
                android:text="@string/button_theresa_IWillNeverAgreeTo"
                android:textColor="@color/colorRed" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
